[*]: finish GraphQL API spec
